# pypatchOTDA

./: 3.0.1  pyproject.toml  readme.ipynb  readme.md
.github/: copilot-instructions.md
notebooks/: mms_CTKE_MERGE.ipynb  mms_hierarch_grid.ipynb  mms_hierarch_grid_drop_low_y.ipynb  results_acc.ipynb  test_mms.py
patchOTDA/: CTKE_M1_ephys.csv  CTKE_M1_meta.csv  Query1_ephys.csv  Query1_meta.csv  Query2_ephys.csv  Query2_meta.csv  Query3_ephys.csv  Query3_meta.csv  VISp_Viewer_ephys.csv  VISp_Viewer_meta.csv  __init__.py  _da_modified  datasets.py  domain.py  domainAdapt.py  domain_adapt.py  install_r_packages_needed.py  loadNWB.py  mms_data.pkl  mms_metadata.json  pyOTDA.code-workspace  pypatchOTDA.code-workspace  utils.py
patchOTDA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
patchOTDA/nn/: __init__.py  uniOTtab.py
patchOTDA/nn/uniood/: main.py
patchOTDA/nn/uniood/configs/: __init__.py
patchOTDA/nn/uniood/datasets/: __init__.py  benchmark.py  transforms.py  utils.py
patchOTDA/nn/uniood/engine/: dataloader.py  evaluator.py  trainer.py
patchOTDA/nn/uniood/methods/: __init__.py  source_only.py  uniot.py
patchOTDA/nn/uniood/models/: __init__.py  classifier.py  ff_net.py  partial_model.py  resnet.py  vit.py
tests/: test_external.py  test_tune.py
