[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patchOTDA"
version = "0.2.0"
description = "Patch project for patchOTDA"
dependencies = ["POT",
"numpy",
"scipy",
"matplotlib",
"nevergrad"]

[tool.setuptools.package-data]
patchOTDA = ["*.pkl"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["patchOTDA"]
