[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patchOTDA"
version = "0.2.0"
description = "Optimal Transport domain adaptation for patch-clamp electrophysiology datasets"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "smestern"},
]
dependencies = [
    "POT>=0.8",
    "numpy>=1.20",
    "scipy>=1.6",
    "matplotlib>=3.3",
    "nevergrad>=0.5",
    "scikit-learn>=1.0,<1.7",
    "joblib>=1.0",
    "pandas>=1.3",
]

[project.optional-dependencies]
torch = ["torch>=1.9"]
nwb = ["h5py>=3.0"]
skada = ["skada>=0.2"]
fugw = ["unbalancedgw"]
nn = ["torch>=1.9", "umap-learn>=0.5"]
all = ["torch>=1.9", "h5py>=3.0", "skada>=0.2", "unbalancedgw", "umap-learn>=0.5"]

[tool.setuptools.package-data]
patchOTDA = ["*.pkl"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["patchOTDA",
    "patchOTDA.*"]  # list of package names to include (["."] by default)
